--- a/rn.html
+++ b/rn.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <!-- GooglE fonts -->
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="rn.css">
     <title>Roman Numeral Conversion</title>
 </head>
 <body>
@@ -34,7 +34,7 @@
         </a>
     </div>
 </div>
-<script type="text/javascript" src="script.js">
+<script type="text/javascript" src="rn.js">
 </script>
 </body>
 </html>
